# detect-antipatterns

./: HOWTO.md  LICENSE  README.md  pyproject.toml
detect_antipatterns/: __init__.py  __main__.py
tests/: test_detect_antipatterns.py
